--- a/paymentcardview/src/main/res/layout/card_view.xml
+++ b/paymentcardview/src/main/res/layout/card_view.xml
@@ -37,8 +37,10 @@
                             android:src="@android:drawable/ic_menu_close_clear_cancel"/>
 
                     <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/imgCard"
+                            android:layout_width="35dp"
+                            android:layout_height="28dp"
+                            android:scaleType="fitXY"
                             android:src="@drawable/ic_credit_card"/>
 
                     <com.manojbhadane.CustomTextView
